version/0.16/_sources/api/ansys/dpf/core/operators/invariant/invariants/InputsInvariants.rst.txt






:class:`InputsInvariants`
=========================


.. py:class:: ansys.dpf.core.operators.invariant.invariants.InputsInvariants(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   invariants operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.invariant.invariants()
   >>> my_generate_principal_stress = bool()
   >>> op.inputs.generate_principal_stress.connect(my_generate_principal_stress)
   >>> my_field = dpf.Field()
   >>> op.inputs.field.connect(my_field)






.. py:currentmodule:: InputsInvariants

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~generate_principal_stress`
            - Allows to connect generate_principal_stress input to the operator.
          * - :py:attr:`~field`
            - Allows to connect field input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.invariant.invariants import InputsInvariants

Property detail
---------------

.. py:property:: generate_principal_stress
   :type: ansys.dpf.core.inputs.Input[bool]


   Allows to connect generate_principal_stress input to the operator.

   if true, generate principal stress in output pin 3/4/5 (default is false)

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.invariant.invariants()
   >>> op.inputs.generate_principal_stress.connect(my_generate_principal_stress)
   >>> # or
   >>> op.inputs.generate_principal_stress(my_generate_principal_stress)

.. py:property:: field
   :type: ansys.dpf.core.inputs.Input[ansys.dpf.core.field.Field]


   Allows to connect field input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.invariant.invariants()
   >>> op.inputs.field.connect(my_field)
   >>> # or
   >>> op.inputs.field(my_field)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




